# BrickGame_v2.0

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
brick_game/: common.c  common.h
brick_game/snake/: controller.h  model.cc  model.h
brick_game/tetris/: tetris.c  tetris.h
gui/cli/: curses_utils.c  curses_utils.h  main.cc  snake_view.cc  snake_view.h  tetris_view.c  tetris_view.h
gui/desktop/: game_field.cc  game_field.h  main.cc  main_window.cc  main_window.h
tests/snake/: main.cc  test_move.cc  test_states.cc  test_user_input.cc  tests.h
tests/tetris/: main.c  suite_can_spawn.c  suite_is_attach.c  suite_is_collide.c  suite_lines_disappeared.c  suite_minor_tests.c  suite_move_down.c  suite_move_left.c  suite_move_right.c  suite_rotate.c  suite_shift.c  suitecases.h
